--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,13 @@ plugins {
     id 'java-library'
     id 'groovy'
     id 'maven-publish'
-    id 'org.springframework.boot' version '3.3.5'
+    id 'org.springframework.boot' version '3.3.5' apply false
     id 'io.spring.dependency-management' version '1.1.6'
     id 'org.graalvm.buildtools.native' version '0.10.3'
     id "pl.allegro.tech.build.axion-release" version "1.18.7"
 }
 
-ext {
-    springCloudVersion = "2023.0.3"
-}
+
 
 scmVersion {
     versionIncrementer('incrementPatch')
@@ -25,10 +23,18 @@ scmVersion {
 group = 'm7011e.the-homeric-odyssey'
 project.version = scmVersion.version
 
-allprojects {
+subprojects {
+    ext {
+        springCloudVersion = "2023.0.3"
+    }
+
     apply plugin: 'java-library'
     apply plugin: 'groovy'
     apply plugin: 'maven-publish'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'org.graalvm.buildtools.native'
+    apply plugin: "pl.allegro.tech.build.axion-release"
 
     project.version = rootProject.version
 
@@ -86,11 +92,49 @@ allprojects {
         }
 
     }
+
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+        implementation 'org.springframework.cloud:spring-cloud-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'org.springframework.session:spring-session-core'
+        implementation 'org.springframework.boot:spring-boot-starter-web-services'
+        compileOnly 'org.projectlombok:lombok'
+        compileOnly group: 'org.springframework.boot', name: 'spring-boot-dependencies', version: '3.3.5', ext: 'pom'
+        annotationProcessor 'org.projectlombok:lombok'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+        }
+    }
+
+    bootJar {
+        enabled = false
+    }
+
+    tasks.named('processAot') {
+        enabled = false
+    }
+
 }
 
-subprojects {
-    version = rootProject.version
+tasks.named('test') {
+    useJUnitPlatform()
+    jvmArgs = ["-DspringAot=false"]
 }
+
+graalvmNative {
+    testSupport = false
+}
+
+
+
+tasks.register('exception-handling')
 
 java {
     toolchain {
@@ -104,31 +148,3 @@ configurations {
     }
 }
 
-
-
-
-
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-    implementation 'org.springframework.cloud:spring-cloud-starter'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.session:spring-session-core'
-    implementation 'org.springframework.boot:spring-boot-starter-web-services'
-    compileOnly 'org.projectlombok:lombok'
-    compileOnly group: 'org.springframework.boot', name: 'spring-boot-dependencies', version: '3.3.5', ext: 'pom'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
-    }
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
