--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    ext {
+        springCloudVersion = "2023.0.3"
+        springbootVersion = '3.3.5'
+        springData = '3.4.0'
+        prometheusVersion = '1.14.1'
+        commonsLang3 = '3.17.0'
+        commonIo = '2.17.0'
+        modelMapper = '3.2.1'
+        openApiSwagger = '2.1.6'
+        commonValidation = '1.9.0'
+    }
+}
+
 plugins {
     id 'java-library'
     id 'groovy'
@@ -7,7 +21,6 @@ plugins {
     id 'org.graalvm.buildtools.native' version '0.10.3'
     id "pl.allegro.tech.build.axion-release" version "1.18.7"
 }
-
 
 scmVersion {
     versionIncrementer('incrementPatch')
@@ -20,7 +33,7 @@ scmVersion {
 }
 
 group = 'm7011e.the-homeric-odyssey'
-project.version = scmVersion.version
+project.version = scmVersion.version + '3'
 
 subprojects.each {
     check.dependsOn("${it.name}:check")
@@ -29,9 +42,14 @@ subprojects.each {
 }
 
 subprojects {
-    ext {
-        springCloudVersion = "2023.0.3"
-    }
+    group = rootProject.group
+    project.version = rootProject.version
+}
+
+configure(
+        subprojects.findAll {
+            !(['common-dependencies'].contains(it.name))
+        }) {
 
     apply plugin: 'java-library'
     apply plugin: 'groovy'
@@ -40,8 +58,16 @@ subprojects {
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'org.graalvm.buildtools.native'
 
+
     project.group = rootProject.group
     project.version = rootProject.version
+
+    configurations {
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+    }
+
 
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter'
@@ -60,6 +86,7 @@ subprojects {
         annotationProcessor 'org.projectlombok:lombok'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
     }
 
     dependencyManagement {
@@ -73,17 +100,50 @@ subprojects {
     }
 
     jar {
-        enabled=true
+        enabled = true
     }
 
     tasks.named('processAot') {
         enabled = false
     }
+
+    tasks.register('sourceJar', org.gradle.jvm.tasks.Jar) {
+        from sourceSets.main.allJava
+        archiveClassifier = "sources"
+    }
+
+    publishing {
+        repositories {
+            maven {
+                if (project.version.toString().contains('-SNAPSHOT')) {
+                    url("${reposiliteUrl}/snapshots")
+                } else {
+                    url("${reposiliteUrl}/releases")
+                }
+                name "Reposilite"
+                credentials(PasswordCredentials) {
+                    username = reposiliteUser
+                    password = reposiliteSecret
+                }
+                authentication {
+                    basic(BasicAuthentication)
+                }
+            }
+        }
+        publications {
+            maven(MavenPublication) {
+                from components.java
+                artifact sourceJar
+            }
+        }
+    }
 }
+
 
 allprojects {
     version = rootProject.version
     group = rootProject.group
+
     apply plugin: 'maven-publish'
 
     java {
@@ -118,37 +178,6 @@ allprojects {
         }
     }
 
-    tasks.register('sourceJar', org.gradle.jvm.tasks.Jar) {
-        from sourceSets.main.allJava
-        archiveClassifier = "sources"
-    }
-
-    publishing {
-        repositories {
-            maven {
-                if (project.version.toString().contains('-SNAPSHOT')) {
-                    url("${reposiliteUrl}/snapshots")
-                } else {
-                    url("${reposiliteUrl}/releases")
-                }
-                name "Reposilite"
-                credentials(PasswordCredentials) {
-                    username = reposiliteUser
-                    password = reposiliteSecret
-                }
-                authentication {
-                    basic(BasicAuthentication)
-                }
-            }
-        }
-        publications {
-
-            maven(MavenPublication) {
-                from components.java
-                artifact sourceJar
-            }
-        }
-    }
 }
 
 tasks.named('test') {
@@ -160,10 +189,4 @@ graalvmNative {
     testSupport = false
 }
 
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
 
