--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'common-utils'
 include "resource-server"
-include 'authentication-components'
-include 'common-dependencies'
+include "authentication-components"
+include "common-dependencies"
 
