--- a/common-dependencies/build.gradle
+++ b/common-dependencies/build.gradle
@@ -11,8 +11,8 @@ dependencies {
     api(project(":resource-server"))
     api(project(":authentication-components"))
 
-    api(group: 'org.springframework.boot', name: 'spring-boot-dependencies', version: springbootVersion)
-    api( group: 'org.springframework.data', name: 'spring-data-commons', version: springData)
+    api(group: 'org.springframework.boot', name: 'spring-boot-dependencies', version: springBootVersion)
+    api( group: 'org.springframework.data', name: 'spring-data-bom', version: springData, ext: 'pom')
     api(group: 'org.springframework.cloud', name: 'spring-cloud-dependencies', version: springCloudVersion)
     api(group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: prometheusVersion)
     api(group: 'org.apache.commons', name: 'commons-lang3', version: commonsLang3)
