--- a/authentication-components/src/main/resources/security.yaml
+++ b/authentication-components/src/main/resources/security.yaml
@@ -1,7 +1,16 @@
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${KEYCLOAK_BASE_URL:http://localhost:8090/realms/The-Homeric-Odyssey-Vendor}
+          jwk-set-uri: ${KEYCLOAK_BASE_JWK:http://localhost:8090/realms/The-Homeric-Odyssey-Vendor/protocol/openid-connect/certs}
+
 security:
   authentication:
     url: ${AUTH_SERVER_URL:http:localhost:8080/auth/login}
     client-id: ${KEYCLOAK_CLIENT_ID:auth-server-client}
+    client-secret: ${KEYCLOAK_CLIENT_SECRET:M9LpCNXlVbLRNCl7p7ZJcEuiQm4yN99C}
     system-user:
       username: ${SYSTEM_USERNAME:system-user}
       password: ${SYSTEM_PASSWORD:system-password}
