--- a/common-dependencies/build.gradle
+++ b/common-dependencies/build.gradle
@@ -10,22 +10,12 @@ javaPlatform {
 dependencies {
     api(project(":resource-server"))
     api(project(":authentication-components"))
-
-    api(group: 'org.springframework.boot', name: 'spring-boot-dependencies', version: springBootVersion)
-    api( group: 'org.springframework.data', name: 'spring-data-bom', version: springData, ext: 'pom')
-    api(group: 'org.springframework.cloud', name: 'spring-cloud-dependencies', version: springCloudVersion)
-    api(group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: prometheusVersion)
-    api(group: 'org.apache.commons', name: 'commons-lang3', version: commonsLang3)
-    api(group: 'commons-io', name: 'commons-io', version: commonIo)
-    api(group: 'org.modelmapper', name: 'modelmapper', version: modelMapper)
-    api(group: 'io.openapitools.swagger', name: 'swagger-maven-plugin', version: openApiSwagger)
-    api(group: 'commons-validator', name: 'commons-validator', version: commonValidation)
-    api(group: 'org.projectlombok', name: 'lombok', version: '1.18.36')
 }
 
 publishing {
     repositories {
         maven {
+            allowInsecureProtocol = true
             if (project.version.toString().contains('-SNAPSHOT')) {
                 url("${reposiliteUrl}/snapshots")
             } else {
